cm4all-beng-proxy (0.7.30) unstable; urgency=low

  * fcgi-client: support responses without a body

 --

cm4all-beng-proxy (0.7.29) unstable; urgency=low

  * http-cache: added missing pool_unref() in memcached_miss()
  * pool: added checked pool references

 -- Max Kellermann <mk@cm4all.com>  Thu, 22 Apr 2010 15:45:48 +0200

cm4all-beng-proxy (0.7.28) unstable; urgency=low

  * fcgi-client: support response status
  * translate: malformed packets are fatal
  * http-cache: don't cache resources with very long URIs
  * memcached-client: increase the maximum key size to 32 kB

 -- Max Kellermann <mk@cm4all.com>  Thu, 15 Apr 2010 15:06:51 +0200

cm4all-beng-proxy (0.7.27) unstable; urgency=low

  * session: use GLib's PRNG to generate session ids
  * session: seed the PRNG with /dev/random
  * response: log UNTRUSTED violation attempts
  * response: drop widget sessions when there is no focus

 -- Max Kellermann <mk@cm4all.com>  Fri, 09 Apr 2010 12:04:18 +0200

cm4all-beng-proxy (0.7.26) unstable; urgency=low

  * memcached-client: schedule read event before callback
  * istream-tee: continue with second output if first is closed

 -- Max Kellermann <mk@cm4all.com>  Sun, 28 Mar 2010 18:08:11 +0200

cm4all-beng-proxy (0.7.25) unstable; urgency=low

  * memcached-client: don't poll if socket is closed
  * fork: close file descriptor on input error
  * pool: don't check attachments in pool_trash()

 -- Max Kellermann <mk@cm4all.com>  Thu, 25 Mar 2010 13:28:01 +0100

cm4all-beng-proxy (0.7.24) unstable; urgency=low

  * memcached-client: release socket after splice

 -- Max Kellermann <mk@cm4all.com>  Mon, 22 Mar 2010 11:29:45 +0100

cm4all-beng-proxy (0.7.23) unstable; urgency=low

  * sink-header: support splice
  * memcached-client: support splice (response)
  * fcgi-client: recover correctly after send error
  * fcgi-client: support chunked request body
  * fcgi-client: basic splice support for the request body
  * http-cache: duplicate headers