@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.7.30) unstable; urgency=low
 
   * fcgi-client: support responses without a body
+  * {http,fcgi}-client: hold caller pool reference during callback
 
  --
 
